--- a/pTailrd2.css
+++ b/pTailrd2.css
@@ -1,105 +1,39 @@
+
+                                /*Navbars and Header*/
 .header {
-    background-color: #AA9739;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    text-align: center;
+background-color: #AA9739;
+padding-top: 1%;
+padding-bottom: 1%;
+text-align: center;
 }
-body {
-    background-color: #AA9739;
-    margin: 0;
-    font-size: 180%;
-    /*font-family: 'Bree Serif', serif;*/
-    /*font-family: 'Play', sans-serif;*/
-    /*font-family: 'Ropa Sans', sans-serif;*/
-    /*font-family: 'Ubuntu', sans-serif;*/
-    font-family: 'Roboto Mono', monospace;
-    /*font-family: 'Baloo Chettan', cursive;*/
-    text-align: center;
-    color: #76276c;
-}
-img{
-    border-radius: 8px;
-    max-width: 20%;
-}
-img:hover{
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-}
-.sel-pic{
-    max-width: 10%;
-}
-.sel-pic:hover{
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
-#s-space{
-    padding-bottom: 45%;
-}
-#a-space{
-    padding-bottom: 18%;
-}
-#about{
-    padding-bottom: 6%;
-}
-#c-space{
-    padding-bottom: 36.85%;
-}
-#b-logo{
-    padding-bottom: 10%;
-}
-.c{
-    color: #76276c;
-    font-family: 'Bree Serif', serif;
-    /*font-family: 'Play', sans-serif;*/
-    /*font-family: 'Ropa Sans', sans-serif;*/
-    /*font-family: 'Ubuntu', sans-serif;*/
-    /*font-family: 'Roboto Mono', monospace;*/
-    /*font-family: 'Baloo Chettan', cursive;*/
-}
-.so-lnk{
-    color: #76276c;
-    text-decoration: none;
-    font-size: 150%;
-}
-.so-lnk:hover{
-    color: #AA3939;
-}
-#email{
-    text-decoration: none;
-    color: #76276c;
-}
+                                /*Top Nav*/
 #navbar {
-    overflow: hidden;
-    background-color: #76276c;
-    z-index: 9999!important;
+overflow: hidden;
+background-color: #76276c;
+z-index: 9999!important;
 }
 #navbar a {
-    float: left;
-    display: block;
-    color: #AA9739;
-    text-align: center;
-    padding: 14px 2.5%;
-    text-decoration: none;
-    font-size: 100%;
-    /*font-family: 'Bree Serif', serif;*/
-    font-family: 'Play', sans-serif;
-    /*font-family: 'Ropa Sans', sans-serif;*/
-    /*font-family: 'Ubuntu', sans-serif;*/
-    /*font-family: 'Roboto Mono', monospace;*/
-    /*font-family: 'Baloo Chettan', cursive;*/
+float: left;
+display: block;
+color: #AA9739;
+text-align: center;
+padding: 14px 2.5%;
+text-decoration: none;
+font-size: 100%;
+/*font-family: 'Bree Serif', serif;*/
+font-family: 'Play', sans-serif;
+/*font-family: 'Ropa Sans', sans-serif;*/
+/*font-family: 'Ubuntu', sans-serif;*/
+/*font-family: 'Roboto Mono', monospace;*/
+/*font-family: 'Baloo Chettan', cursive;*/
 }
 #navbar a:hover {
-    background-color: #AA3939;
-    color: #AA9739;
+background-color: #AA3939;
+color: #AA9739;
 }
 #navbar a.active {
-    background-color: #AA3939;
-    color: #AA9739;
-}
-.content {
-    padding-left: 5%;
-    padding-right: 5%;
-    height: 100%;
+background-color: #AA3939;
+color: #AA9739;
 }
 .sticky {
     position: fixed;
@@ -111,13 +45,14 @@ img:hover{
     padding-left: 80px;
     padding-right: 80px;
 }
+                            /*Side Nav*/
 #mySidenav a {
     position: absolute;
     left: -100px;
     transition: 0.3s;
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 20%;
+    width: 10%;
     color: #AA9739;
     text-decoration: none;
     background-color: #76276c;
@@ -135,4 +70,72 @@ img:hover{
 #stretch {
     top: 59%;
     background-color: #76276c;
+}
+
+                                /*Page Content*/
+body {
+background-color: #AA9739;
+margin: 0;
+font-size: 180%;
+/*font-family: 'Bree Serif', serif;*/
+/*font-family: 'Play', sans-serif;*/
+/*font-family: 'Ropa Sans', sans-serif;*/
+/*font-family: 'Ubuntu', sans-serif;*/
+font-family: 'Roboto Mono', monospace;
+/*font-family: 'Baloo Chettan', cursive;*/
+text-align: center;
+color: #76276c;
+}
+img{
+border-radius: 8px;
+max-width: 20%;
+}
+img:hover{
+opacity: 0.5;
+filter: alpha(opacity=50);
+}
+#email{
+text-decoration: none;
+color: #76276c;
+}
+#carouSel{
+max-width: 50%;
+margin-left: 24%;
+}
+#s-space{
+padding-bottom: 45%;
+}
+#a-space{
+padding-bottom: 18%;
+}
+#about{
+padding-bottom: 6%;
+}
+#c-space{
+padding-bottom: 36.85%;
+}
+#b-logo{
+padding-bottom: 10%;
+}
+.c{
+color: #76276c;
+font-family: 'Bree Serif', serif;
+/*font-family: 'Play', sans-serif;*/
+/*font-family: 'Ropa Sans', sans-serif;*/
+/*font-family: 'Ubuntu', sans-serif;*/
+/*font-family: 'Roboto Mono', monospace;*/
+/*font-family: 'Baloo Chettan', cursive;*/
+}
+.so-lnk{
+color: #76276c;
+text-decoration: none;
+font-size: 150%;
+}
+.so-lnk:hover{
+color: #AA3939;
+}
+.content {
+padding-left: 5%;
+padding-right: 5%;
+height: 100%;
 }
